file name overflow fixed

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -385,3 +385,4 @@ body.dashboard.project-page .news-feed .project-updates a.project-update span.up
 
 body.project-page .team_member_new .span-6, .team_member_edit .span-6{ padding:10px 0; }
 
+body.projects-page input.text.git-url.project_list_url { width:165px; }
